# Orquestrador

./: .gitignore  README.md  pyproject.toml
runs/1/llm/: triage-input-0001.json
runs/5/raw/: subfinder.txt
runs/6/raw/: subfinder.txt
src/bb_orchestrator/: __init__.py  __main__.py  adapters.py  cli.py  database.py  domain.py  flow_policies.py  llm.py  models.py  policies.py  programs.py  schemas.py  services.py  terminal_ui.py  triage_selection.py
tests/: test_dns.py  test_flow_mapping.py  test_http.py  test_katana.py  test_llm.py  test_policies.py  test_ports.py  test_programs.py  test_recon.py  test_scope.py  test_services.py  test_surface.py  test_terminal_ui.py  test_triage.py  test_triage_selection.py
